# playground_kafka_rust

./: .env  .gitignore  Cargo.toml  README.md
composer/: Dockerfilekafk  Dockerfilekafk_2  Dockerfilezookeepe  docker-compose.yaml  kafka.nomad
src/: main.rs
src/kafka/: client.rs  message.rs  mod.rs  topic.rs
