[package]
name = "kfk"
version = "0.1.0"
authors = ["Gabriel Souza <gabrielsouza849@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.25", features = ["cmake-build","tokio"] }
tokio= { version = "1", features = ["full"] }
#log = "0.4.14"
#env_logger = "0.9.0"
