[package]
name = "kfk"
version = "0.1.0"
authors = ["Gabriel Souza <gabrielsouza849@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.25", features = ["cmake-build","tokio"] }
tokio= { version = "1", features = ["full"] }
dotenv = "0.15.0"
uuid = { features = [ "v1","v4"], version="0.8.2" }